2007-12-14  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/postinstall.sh.tmp (InstallConffiles): Add cmp(1).
	(CygbuildDefineGlobalMain): Rename CYGBUILD_FILE_MANIFEST_TO and
	CYGBUILD_FILE_MANIFEST_FROM
	(CygbuildInstallCygwinPartMain): Treat new postinstall-manifest.lst

2007-12-13  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdBuildPython): Change to
	use `CygbuildRunPythonSetupCmd' will will print less output.
	(CygbuildRunPythonSetupCmd): On error dispay results.
	(CygbuildCmdInstallMain): Send $0 to custom
	CUGWIN-PATCHES/instal.sh

2007-12-12  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildConfPerlMain): Remove SITEPREFIX
	(CygbuildMakeRunInstallFixPerlManpage): improve POD to manpage
	conversion.
	(WasLibraryInstallMakefile): New.
	(WasLibraryInstall): Use `WasLibraryInstallMakefile'.

2007-12-08  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	-- Comment out all `CygbuildPerlModuleLocation' calls and
	   use $CYGBUILD_STATIC_PERL_MODULE
	(CygbuildCommandMain): Add option -F|--force.
	(CygbuildCmdPkgDevelStandard): Move manual pages from
	devel-lib to devel-dev. Rewrote devel-dev. Split function.
	(CygbuildCmdPkgDevelStandardDev): New.
	(CygbuildCmdPkgDevelStandardLib): New. Fix version number.
	(CygbuildCmdPkgDevelStandardBin): New.
	(CygbuildCmdPkgDevelStandardDoc): New.

2007-12-07  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	-- Add `trap' to clean temporary files.
	(CygbuildCmdInstallCheckMain): Fix status code assignment.
	(CygbuildCygcheckLibraryDepGrepPgkNames): Check
	missing cache file better.
	(CygbuildCmdGetSource): Now handles multiple patches
	in Cygwin Net release source packages. Detect *.cygport
	(CygbuildCmdConfAutomake): Simplify.
	(CygbuildCmdConfMain): Run `CygbuildCmdConfAutomake' inside
	.build, not $srcdir.
	(CygbuildCmdPkgDevelStandard): Improve manual page search.
	Add color support. Add bin package support
	(CygbuildCmdPackageBinMain): New